# kpi

./: .env.example  .gitignore  README.md  config.yaml  kpi_date_demo.html  kpi_project_demo.html  pyproject.toml
docs/: methode-calcul.md
src/kpi/: __init__.py  cli.py  server.py
src/kpi/adapters/: confluence_adapter.py  jira_adapter.py  network.py
src/kpi/config/: loader.py
src/kpi/domain/: dimensions.py  models.py
src/kpi/services/: calculator.py  dates.py  mock.py  renderer.py  store.py  tagger.py
src/kpi/static/: kpi.css  kpi.js
src/kpi/templates/: _macros.html  _shared.html  kpi_confluence.html.j2  kpi_date.html  kpi_preview.html  kpi_project.html
tests/: test_all.py
